--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,21 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Source Serif Pro', serif;
+    font-family: 'Redressed', cursive;
+    margin: 0px;
+}
+img{
+    max-width: 100%;
 }
 .container{
     width: 1150px;
     margin: auto;
+    height: 600px;
 }
 nav{
-    margin:2%;
+    margin-top:3%;
+    margin-right: 7%;
+    margin-bottom: 2%;
 }
 nav ul{
     list-style-type: none;
@@ -23,4 +30,108 @@ nav ul li a{
     text-decoration: none;
     color: black;
     margin: 20px;
+    font-size: 18px;
+}
+.col-2{
+    width: 50%;
+    float: left;
+}
+.content{
+    margin-top: 3%;
+    padding: 3%;
+}
+.highlight-1{
+    color: #363958;
+}
+.highlight-2{
+    color: #FF3987;
+}
+.col-2 h1{
+    font-size: 50px;
+}
+.mrg{
+    margin-bottom: 6%;
+    margin-top: -20px;
+}
+.col-2 p{
+    font-size: 18px;
+    text-align: justify;
+    margin-bottom: 10%;
+}
+.button{
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    background-image: linear-gradient(45deg,#FF3C89,red);
+    border-radius: 5px;
+}
+.content1{
+    margin-top: 4%;
+    padding: 3%;
+}
+.col2{
+	width: 33.33%;
+    float: left;
+	padding: 10px;
+	box-sizing: border-box;
+}
+.latest-projects{
+    background-color:#F8F9FC;
+    padding: 5%;
+}
+.latest-projects h1{
+    text-align: center;
+    font-size: 45px;
+    padding-top: 2%;
+}
+.col-3{
+    width: 30%;
+    float: left; 
+}
+.project1{
+    height: 60%;
+    padding: 2%;
+    border-radius: 5px;
+    background-color: #ffffff;
+    margin: 1%;
+}
+.work-enquiry{
+    margin-top: 130px;
+    margin-bottom: 70px;
+}
+.last-sec{
+    background-image: url(../images/back.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: auto;
+    width: 906px;
+    height: 225px;
+}
+.col{
+    width: 50%;
+    float: left;
+}
+.col h1{
+    margin-left: 80px;
+    margin-top: 95px;
+    font-size: 30px;
+    color: white;
+}
+.col a{
+    display: inline-block;
+    margin-top: 95px;
+    margin-left: 250px;
+    color: white;
+}
+.footer h3{
+    text-align: center;
+}
+.footer h1{
+    text-align: center;
+}
+.social-link{
+    width: 30%;
+    margin: auto;
 }
