--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ nav ul li a{
 }
 .button{
     text-decoration: none;
-    color: black;
+    color: whitegit;
     text-transform: uppercase;
     padding: 10px 20px;
     background-image: linear-gradient(45deg,#FF3C89,red);
